# ev-manager

./: README.md  setup.cfg
ev_manager/: __init__.py  ev_manager.py  event.py
event_manager/: event_manager.py
eventmanager/: __init__.py  eventmanager.py
package-tools/: package.bat
