[metadata]
name = ev-manager
version = 0.1.0
author = Nils Soderman
description = Bind functions to events that can be called from any other script at any time.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nils-soderman/ev-manager
keywords = event, manager, bind, subscribe, fire, function, callback, emit
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.7
include_package_data = False